--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,10 @@ graphene==2.1.9
 graphene-django==2.15.0
 graphql-core==2.3.2
 graphql-relay==2.0.1
+numpy==1.21.3
+pandas==1.3.4
 promise==2.3
+python-dateutil==2.8.2
 pytz==2021.3
 Rx==1.6.1
 singledispatch==3.7.0
