--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@expo/vector-icons": "^12.0.0",
+    "@freakycoder/react-native-bounceable": "^0.2.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -32,6 +35,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-animated-spinkit": "^1.5.2",
+    "react-native-dynamic-search-bar": "^2.0.1",
+    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
