--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.64.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1",
     "react-p5": "^1.3.21"
   },
