--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -20,6 +20,7 @@
     "apollo-boost": "^0.4.9",
     "cors": "^2.8.5",
     "expo": "~43.0.0",
+    "expo-app-loading": "~1.2.1",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.2",
     "expo-font": "~10.0.3",
@@ -27,7 +28,7 @@
     "expo-splash-screen": "~0.13.3",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
-    "graphql": "^16.0.1",
+    "graphql": "^15.0.0",
     "graphql-hooks": "^5.4.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
