--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -37,13 +37,17 @@
     "react-native-screens": "~3.8.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1",
-    "react-p5": "^1.3.21"
+    "react-p5": "^1.3.21",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-redux": "^7.1.20",
     "jest-expo": "~43.0.0",
+    "redux-tools": "^3.2.0",
     "typescript": "~4.3.5"
   },
   "private": true
