--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -19,7 +19,8 @@
     "@material-ui/icons": "^4.11.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "apollo-boost": "^0.4.9",
     "cors": "^2.8.5",
     "expo": "~43.0.0",
@@ -35,12 +36,15 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-dynamic-search-bar": "^2.0.1",
     "react-native-elements": "^3.4.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "^0.17.5",
     "react-p5": "^1.3.21"
   },
   "devDependencies": {
