--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -15,8 +15,10 @@
     "@apollo/react-hooks": "^4.0.0",
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/core": "react-navigation/core",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.0.11",
     "apollo-boost": "^0.4.9",
     "cors": "^2.8.5",
     "expo": "~43.0.0",
@@ -35,6 +37,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4",
     "react-p5": "^1.3.21"
   },
   "devDependencies": {
