--- a/app/my-app/package.json
+++ b/app/my-app/package.json
@@ -42,12 +42,13 @@
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-dynamic-search-bar": "^2.0.1",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.10.0",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "^0.17.5",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-web": "^0.17.5",
     "react-navigation": "^4.4.4",
     "react-p5": "^1.3.21"
   },
